# deadnews-template-ansible

./: .ansible-lint  .env.yml  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .renovaterc.json  Makefile  Makefile.play.mk  README.md  ansible.cfg  galaxy.yml  inventory.toml  playbooks.mk  pyproject.toml  requirements.yml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  main.yml
molecule/default/: converge.yml  molecule.yml
molecule/grafana/: molecule.yml
molecule/playbooks/: converge.yml  create.yml  destroy.yml  prepare-systemctl.yml  prepare-systemd.yml  prepare.yml
molecule/playbooks/tasks/: create-fail.yml
playbooks/: deploy.yml  ping.yml
roles/docker/files/: bash_profile.sh
roles/docker/handlers/: main.yml
roles/docker/meta/: argument_specs.yml
roles/docker/tasks/: main.yml
roles/docker/vars/: main.yml
roles/docker_app/files/: .env  docker-compose.yml
roles/docker_app/molecule/docker_app/: converge.yml  molecule.yml
roles/docker_app/molecule/docker_app_dind/: converge.yml  molecule.yml
roles/docker_app/tasks/: main.yml
roles/docker_compose/meta/: argument_specs.yml
roles/docker_compose/tasks/: main.yml
roles/grafana/handlers/: main.yml
roles/grafana/molecule/default/: molecule.yml
roles/grafana/molecule/loki/: converge.yml  molecule.yml
roles/grafana/molecule/tempo/: converge.yml  molecule.yml
roles/grafana/tasks/: loki.yml  tempo.yml
roles/grafana/templates/: loki.yml.j2  tempo.yml.j2
roles/grafana_loki/molecule/grafana_loki/: molecule.yml
roles/grafana_loki/tasks/: main.yml
roles/traefik/files/: docker-compose.yml
roles/traefik/molecule/traefik/: molecule.yml
roles/traefik/tasks/: main.yml
roles/traefik/templates/: vector.yml.j2
tests/: test_integration.py
