[tool.poetry]
name = "deadnews-template-ansible"
version = "0.0.0"
description = "Ansible Project Template"
authors = ["DeadNews <deadnewsgit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "^2.16.4"

[tool.poetry.group.lint.dependencies]
ansible-lint = { version = "^24.2.1", markers = "platform_system != 'Windows'" }

[tool.poetry.group.test.dependencies]
molecule = "^24.2.0"
molecule-plugins = { version = "^23.5.3", extras = ["docker", "vagrant"] }
pytest = "^8.1.1"
pytest-ansible = "^24.1.2"

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]
markers = ["docker", "molecule", "no_driver", "vagrant"]
