[tool.poetry]
name = "deadnews-template-ansible"
version = "0.0.0"
description = "Ansible Project Template"
authors = ["DeadNews <deadnewsgit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "^2.16.6"

[tool.poetry.group.dev.dependencies]
galaxy-update = "^0.0.1a0"

[tool.poetry.group.lint.dependencies]
ansible-lint = { version = "^24.6.1", markers = "platform_system != 'Windows'" }

[tool.poetry.group.test.dependencies]
molecule = "^24.6.0"
molecule-plugins = { version = "^23.5.3", extras = ["docker", "vagrant"] }
pytest = "^8.2.2"
pytest-ansible = "^24.1.3"

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]
markers = ["docker", "molecule", "no_driver", "vagrant"]
