[tool.poetry]
name = "deadnews-template-ansible"
version = "0.0.0"
description = "Ansible Project Template"
authors = ["DeadNews <deadnewsgit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "^2.18.0"

[tool.poetry.group.dev.dependencies]
galaxy-update = "^0.0.1"

[tool.poetry.group.lint.dependencies]
ansible-lint = { version = "^24.12.2", markers = "platform_system != 'Windows'" }

[tool.poetry.group.test.dependencies]
molecule = "^24.12.0"
molecule-plugins = { version = "^23.5.3", extras = ["docker", "vagrant"] }
pytest = "^8.3.4"
pytest-ansible = "^24.12.0"

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]
markers = ["docker", "molecule", "no_driver", "vagrant"]
